--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.5.6",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8"
